Fixing footer overflow bug + Change page main text

--- a/css/footer.css
+++ b/css/footer.css
@@ -4,9 +4,12 @@ footer {
 
     background-color: rgb(26, 26, 70);
     width: 100%;
-    padding: 3vh;
     text-align: center;
 
-    font-size: 4vh;
+    height: 10vh;
+
+    font-size: 2.5vh;
     font-weight: bold;
+    overflow-x: hidden;
+    z-index: -999;
 }
